--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+NEW in 2.1.1 - 2018-08-01
+=========================
+
+  * libtracker-direct: Plug leaks
+  * libtracker-sparql-backend: Fix fallback from direct to bus
+    connection for queries.
+
+Translations: es, lt, ro
+
 NEW in 2.1.0 - 2018-07.22
 =========================
 
